format the top sub section

--- a/index.html
+++ b/index.html
@@ -11,18 +11,26 @@
     <div class='container'>
         <div class="pretty">
             <div class="logo">
-                <h1>fsdfdasfddd</h1>
-            </div>
 
+            </div>
         </div>
         <div class="info">
+            <div class="top-text">
+                <div class="text">
+                <p>This is not a real online service! You know you need something like this in your life 
+                    to help you realize your deepest dreams. <br>Sing up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            </div>
 
+            <div class="form-info">
 
+            </div>
+
+            <div class="lower">
+
+            </div>
         </div>
-
-
-
-
     </div>
     
 </body>
