fix format of input boxes. Need to figure out why sizing of subsections does not match up with html page.

--- a/index.html
+++ b/index.html
@@ -18,15 +18,47 @@
             <div class="top-text">
                 <div class="text">
                 <p>This is not a real online service! You know you need something like this in your life 
-                    to help you realize your deepest dreams. <br>Sing up <em>now</em> to get started.</p>
+                    to help you realize your deepest dreams. <br>Sign up <em>now</em> to get started.</p>
                 <p>You <em>know</em> you want to.</p>
             </div>
             </div>
-
             <div class="form-info">
+                <!--<form action="" method="post/get">-->
+                <fieldset>
+                    <legend>Let's do this!</legend>
+                    <div class="inputs">
+                        <div style="float:left;margin-right:20px;">
+                    <label for="first_name">First Name*</label>
+                        <input type="text" name="first_name" id="first_name" required>
+                    </div>
+                    <div style="float:left;margin-right:20px;">
+                    <label for="last_name">Last Name*</label>
+                        <input type="text" name="last_name" id="last_name" required>
+                    </div>
 
+                    <br style="clear:both" />
+
+                    <div style="float:left;margin-right:20px;">
+                    <label for="email">Email*</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div style="float:left;margin-right:20px;">
+                    <label for="phone">Phone Number</label>
+                        <input type="tel" name="phone" id="phone">
+                    </div>
+                    <br style="clear:both" />
+                    <div style="float:left;margin-right:20px;">
+                    <label for="pwd">Password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div style="float:left;margin-right:20px;">
+                    <label for="pwd">Confirm Password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    </div>
+                </fieldset>    
             </div>
-
+              
             <div class="lower">
 
             </div>
